--- a/Burgers_no_noise.ipynb
+++ b/Burgers_no_noise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,8 @@
     "%run Classes/Model.ipynb\n",
     "%run Classes/Noise.ipynb\n",
     "%run Classes/full_visualization.ipynb\n",
-    "%run Algorithms/Algorithm_2.ipynb\n",
+    "# %run Algorithms/Algorithm_2.ipynb\n",
+    "%run Algorithms/Algorithm_2_FFT.ipynb\n",
     "%run Classes/Burgers_PDE_FIND.ipynb\n",
     "\n",
     "#Disable progress bars from tqdm\n",
@@ -21,13 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Set global parameters\n",
     "\n",
-    "a, b, s, t = -8, 8, 0, 10 # space-time boundaries\n",
+    "a, b, s, t = 0, 16, 0, 10 # space-time boundaries\n",
     "\n",
     "X_, T_ = np.linspace(a,b,513), np.linspace(s,t,501) # space-time grid for generating solutions\n",
     "x_space = 1\n",
@@ -45,7 +46,7 @@
     "\n",
     "#Model parameters\n",
     "height = 3\n",
-    "deg = 2.5\n",
+    "deg = 5\n",
     "kernel_deg = 2\n",
     "noise_deg = -1.5\n",
     "free_num = 2\n",
@@ -102,7 +103,7 @@
     "    W = np.zeros((k, len(T_), len(X_))) # No forcing\n",
     "    \n",
     "    #Generate solutions\n",
-    "    Burgers_ = SPDE(BC = BC, IC = IC, eps = eps).Burgers(W, T = T_, X = X_) # solve Burger's equations on the fine grid\n",
+    "    Burgers_ = SPDE(BC = BC, IC = IC, eps = eps).Burgers_FFT(W, T = T_, X = X_) # solve Burger's equations on the fine grid\n",
     "\n",
     "    Burgers = Burgers_[:,::t_space,::x_space] # Observed points of Burger's equations\n",
     "    \n",
@@ -198,7 +199,7 @@
     "\n",
     "    Burgers_noise_FIND = SPDE(BC = 'P',\n",
     "                              IC = IC_,\n",
-    "                              eps = eps_).Burgers(W_,\n",
+    "                              eps = eps_).Burgers_FFT(W_,\n",
     "                                                  lambd = -lambd_find,\n",
     "                                                  T = S_,\n",
     "                                                  X = X)\n",
@@ -223,9 +224,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average average error: nan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/numpy/core/fromnumeric.py:3440: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/numpy/core/_methods.py:189: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  ret = ret.dtype.type(ret / rcount)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "max() arg is an empty sequence",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-c24a0816c042>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Average average error:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mav_er\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mexps\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Maximum average error:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mav_er\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mexps\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Minimum average error:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mav_er\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mexps\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: max() arg is an empty sequence"
+     ]
+    }
+   ],
    "source": [
     "for exps in [exps_Alg2, exps_find]:\n",
     "\n",
@@ -249,9 +279,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average viscosity: -0.0008585128778512712, lambda: -0.05702853993873838\n",
+      "Maximum viscosity: -0.0008585128778512712, lambda: -0.05702853993873838\n",
+      "Minimum viscosity: -0.0008585128778512712, lambda: -0.05702853993873838\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Average viscosity: {}, lambda: {}\".format(np.mean(exps_find_eps), np.mean(exps_find_lambd)))\n",
     "print(\"Maximum viscosity: {}, lambda: {}\".format(max(exps_find_eps), max(exps_find_lambd)))\n",
@@ -268,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -282,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
