--- a/Burgers_no_noise.ipynb
+++ b/Burgers_no_noise.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,12 +30,12 @@
     "\n",
     "a, b, s, t = 0, 16, 0, 10 # space-time boundaries\n",
     "\n",
-    "X_, T_ = np.linspace(a,b,513), np.linspace(s,t,501) # space-time grid for generating solutions\n",
-    "x_space = 1\n",
+    "X_, T_ = np.linspace(a,b,1025), np.linspace(s,t,2001) # space-time grid for generating solutions\n",
+    "x_space = 2\n",
     "t_space = 10\n",
     "X, T = X_[::x_space], T_[::t_space] # space-time grid of observed points. O_X and O_T\n",
     "\n",
-    "eps = 0.2 #Viscosity\n",
+    "eps = 0.1 #Viscosity\n",
     "\n",
     "k = 120 # Number of realizations (multiple of 3)\n",
     "m = 20 # Number of test cases, m < k\n",
@@ -71,14 +71,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating Model\n"
+      "Creating Model\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
+      "CPU times: user 4min 25s, sys: 1min, total: 5min 26s\n",
+      "Wall time: 5min 26s\n"
      ]
     }
    ],
@@ -135,10 +138,8 @@
     "    experiment_noise.set_train_test(test = test) # initialize test set\n",
     "\n",
     "    experiment_noise.set_trees() # extract trees\n",
-    "    R.exceptions = set([tree for tree in experiment_noise.trees if '2' in tree])\n",
-    "    experiment_noise.set_trees([tree for tree in experiment_noise.trees if '2' not in tree])\n",
     "\n",
-    "    experiment_noise.training_models(time_grid_num = 15) # Create models for Step 2 of Algorithm 2\n",
+    "    experiment_noise.training_models(time_grid_num = 10) # Create models for Step 2 of Algorithm 2\n",
     "    \n",
     "    \n",
     "    experiment_noise.fit_training_model() # Linear fit for Step 2 of Algorithm 2\n",
@@ -224,35 +225,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average average error: nan\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/numpy/core/fromnumeric.py:3440: RuntimeWarning: Mean of empty slice.\n",
-      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
-      "/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/numpy/core/_methods.py:189: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  ret = ret.dtype.type(ret / rcount)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "max() arg is an empty sequence",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-c24a0816c042>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Average average error:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mav_er\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mexps\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Maximum average error:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mav_er\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mexps\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Minimum average error:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mav_er\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mexps\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: max() arg is an empty sequence"
+      "Average average error: 0.003392970412627721\n",
+      "Maximum average error: 0.003392970412627721\n",
+      "Minimum average error: 0.003392970412627721\n",
+      "\n",
+      "Average maximum error: 0.015083589533288583\n",
+      "Maximum maximum error: 0.015083589533288583\n",
+      "Minimum maximum error: 0.015083589533288583\n",
+      "\n",
+      "Average minimum error: 0.0004827028319672798\n",
+      "Maximum minimum error: 0.0004827028319672798\n",
+      "Minimum minimum error: 0.0004827028319672798\n",
+      "\n",
+      "=====================\n",
+      "Average average error: 0.04119356494699881\n",
+      "Maximum average error: 0.04119356494699881\n",
+      "Minimum average error: 0.04119356494699881\n",
+      "\n",
+      "Average maximum error: 0.15624432012950099\n",
+      "Maximum maximum error: 0.15624432012950099\n",
+      "Minimum maximum error: 0.15624432012950099\n",
+      "\n",
+      "Average minimum error: 0.01030516284971908\n",
+      "Maximum minimum error: 0.01030516284971908\n",
+      "Minimum minimum error: 0.01030516284971908\n",
+      "\n",
+      "=====================\n"
      ]
     }
    ],
@@ -279,16 +284,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average viscosity: -0.0008585128778512712, lambda: -0.05702853993873838\n",
-      "Maximum viscosity: -0.0008585128778512712, lambda: -0.05702853993873838\n",
-      "Minimum viscosity: -0.0008585128778512712, lambda: -0.05702853993873838\n"
+      "Average viscosity: 0.15029632240870855, lambda: -0.975272592577995\n",
+      "Maximum viscosity: 0.15029632240870855, lambda: -0.975272592577995\n",
+      "Minimum viscosity: 0.15029632240870855, lambda: -0.975272592577995\n"
      ]
     }
    ],
