--- a/Burgers_no_noise.ipynb
+++ b/Burgers_no_noise.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
     "k = 120 # Number of realizations (multiple of 3)\n",
     "m = 20 # Number of test cases, m < k\n",
     "\n",
-    "N = 1 # Number of experiments\n",
+    "N = 10 # Number of experiments\n",
     "\n",
     "noise = 0.0 #noise intensity\n",
     "\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -80,8 +80,36 @@
      "text": [
       "Creating Model\n",
       "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
-      "CPU times: user 4min 25s, sys: 1min, total: 5min 26s\n",
-      "Wall time: 5min 26s\n"
+      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
+      "Creating Model\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
+      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
+      "Creating Model\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
+      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
+      "Creating Model\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
+      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
+      "Creating Model\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
+      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
+      "Creating Model\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
+      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
+      "Creating Model\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
+      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
+      "Creating Model\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
+      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
+      "Creating Model\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
+      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
+      "Creating Model\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
+      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
+      "CPU times: user 1h 28min 48s, sys: 17min 49s, total: 1h 46min 38s\n",
+      "Wall time: 2h 26min 50s\n"
      ]
     }
    ],
@@ -92,8 +120,8 @@
     "exps_v = []\n",
     "exps_v_coef = []\n",
     "exps_find = []\n",
-    "exps_find_eps =[]\n",
-    "exps_find_lambd =[]\n",
+    "exps_find_eps = []\n",
+    "exps_find_lambd = []\n",
     "\n",
     "for n in range(0,N):\n",
     "    # Create realizations of initial conditions. \n",
@@ -225,37 +253,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average average error: 0.003392970412627721\n",
-      "Maximum average error: 0.003392970412627721\n",
-      "Minimum average error: 0.003392970412627721\n",
+      "Average average error: 0.2239173196649292\n",
+      "Maximum average error: 2.018596246693517\n",
+      "Minimum average error: 0.0008716690024409078\n",
       "\n",
-      "Average maximum error: 0.015083589533288583\n",
-      "Maximum maximum error: 0.015083589533288583\n",
-      "Minimum maximum error: 0.015083589533288583\n",
+      "Average maximum error: 1.6769330915949232\n",
+      "Maximum maximum error: 13.014984894053104\n",
+      "Minimum maximum error: 0.002080609583293296\n",
       "\n",
-      "Average minimum error: 0.0004827028319672798\n",
-      "Maximum minimum error: 0.0004827028319672798\n",
-      "Minimum minimum error: 0.0004827028319672798\n",
+      "Average minimum error: 0.0007650899709596656\n",
+      "Maximum minimum error: 0.003999984263644648\n",
+      "Minimum minimum error: 9.956414452728521e-05\n",
       "\n",
       "=====================\n",
-      "Average average error: 0.04119356494699881\n",
-      "Maximum average error: 0.04119356494699881\n",
-      "Minimum average error: 0.04119356494699881\n",
+      "Average average error: 0.017157013549694906\n",
+      "Maximum average error: 0.026880999944501195\n",
+      "Minimum average error: 0.005965225118296762\n",
       "\n",
-      "Average maximum error: 0.15624432012950099\n",
-      "Maximum maximum error: 0.15624432012950099\n",
-      "Minimum maximum error: 0.15624432012950099\n",
+      "Average maximum error: 0.053758763204256946\n",
+      "Maximum maximum error: 0.10867721447684361\n",
+      "Minimum maximum error: 0.01604159223295464\n",
       "\n",
-      "Average minimum error: 0.01030516284971908\n",
-      "Maximum minimum error: 0.01030516284971908\n",
-      "Minimum minimum error: 0.01030516284971908\n",
+      "Average minimum error: 0.003288343238769651\n",
+      "Maximum minimum error: 0.0057935841878649745\n",
+      "Minimum minimum error: 0.0010323092613782703\n",
       "\n",
       "=====================\n"
      ]
@@ -284,16 +312,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average viscosity: 0.15029632240870855, lambda: -0.975272592577995\n",
-      "Maximum viscosity: 0.15029632240870855, lambda: -0.975272592577995\n",
-      "Minimum viscosity: 0.15029632240870855, lambda: -0.975272592577995\n"
+      "Average viscosity: 0.11898150223863317, lambda: -0.9878175670194862\n",
+      "Maximum viscosity: 0.12922896508573053, lambda: -0.9737782587435511\n",
+      "Minimum viscosity: 0.11102494383857071, lambda: -0.9924759344481009\n"
      ]
     }
    ],
@@ -301,6 +329,272 @@
     "print(\"Average viscosity: {}, lambda: {}\".format(np.mean(exps_find_eps), np.mean(exps_find_lambd)))\n",
     "print(\"Maximum viscosity: {}, lambda: {}\".format(max(exps_find_eps), max(exps_find_lambd)))\n",
     "print(\"Minimum viscosity: {}, lambda: {}\".format(min(exps_find_eps), min(exps_find_lambd)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average average error: 0.004621144089675013\n",
+      "Maximum average error: 0.024759779748431042\n",
+      "Minimum average error: 0.0008716690024409078\n",
+      "\n",
+      "Average maximum error: 0.016930145916709806\n",
+      "Maximum maximum error: 0.09106565603453168\n",
+      "Minimum maximum error: 0.002080609583293296\n",
+      "\n",
+      "Average minimum error: 0.000735927230480257\n",
+      "Maximum minimum error: 0.003999984263644648\n",
+      "Minimum minimum error: 9.956414452728521e-05\n",
+      "\n",
+      "=====================\n",
+      "Average average error: 0.01673840561095561\n",
+      "Maximum average error: 0.026880999944501195\n",
+      "Minimum average error: 0.005965225118296762\n",
+      "\n",
+      "Average maximum error: 0.05409432189632494\n",
+      "Maximum maximum error: 0.10867721447684361\n",
+      "Minimum maximum error: 0.01604159223295464\n",
+      "\n",
+      "Average minimum error: 0.0028862514307403412\n",
+      "Maximum minimum error: 0.004677630311192571\n",
+      "Minimum minimum error: 0.0010323092613782703\n",
+      "\n",
+      "=====================\n"
+     ]
+    }
+   ],
+   "source": [
+    "K = {5,8}\n",
+    "for exps in [[exps_Alg2[k] for k in range(10) if k not in K], [exps_find[k] for k in range(10) if k not in K]]:\n",
+    "\n",
+    "    print(\"Average average error:\", np.mean([e.av_er for e in exps]))\n",
+    "    print(\"Maximum average error:\", max([e.av_er for e in exps]))\n",
+    "    print(\"Minimum average error:\", min([e.av_er for e in exps]))\n",
+    "    print('')\n",
+    "\n",
+    "    print(\"Average maximum error:\", np.mean([e.max_er for e in exps]))\n",
+    "    print(\"Maximum maximum error:\", max([e.max_er for e in exps]))\n",
+    "    print(\"Minimum maximum error:\", min([e.max_er for e in exps]))\n",
+    "    print('')\n",
+    "\n",
+    "    print(\"Average minimum error:\", np.mean([e.min_er for e in exps]))\n",
+    "    print(\"Maximum minimum error:\", max([e.min_er for e in exps]))\n",
+    "    print(\"Minimum minimum error:\", min([e.min_er for e in exps]))\n",
+    "    print('')\n",
+    "\n",
+    "    print(\"=====================\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0031742280727352357,\n",
+       " 0.0027738661350978984,\n",
+       " 0.0011391455704475523,\n",
+       " 0.0027636723721892018,\n",
+       " 0.002623507380202401,\n",
+       " 0.005821907167080326,\n",
+       " 10.504957316486482,\n",
+       " 0.017269730852147894,\n",
+       " 0.0017297188700348355,\n",
+       " 0.0631502780354008,\n",
+       " 12.006201369360152,\n",
+       " 13.014984894053104,\n",
+       " 0.004545341317388923,\n",
+       " 4.7079147361262725,\n",
+       " 0.01696177965370958,\n",
+       " 0.0025677566192509184,\n",
+       " 0.004519920527451801,\n",
+       " 0.0024768166484147253,\n",
+       " 0.004769717751739776,\n",
+       " 0.0015792308710345132]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exps_Alg2[5].error_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.00134322900869213,\n",
+       " 0.0023225003487707422,\n",
+       " 0.003633534798451749,\n",
+       " 0.004808361935723348,\n",
+       " 0.0059972324805139775,\n",
+       " 0.006262054974366487,\n",
+       " 0.0008991772429137162,\n",
+       " 0.002663918229103143,\n",
+       " 0.0006243362953070477,\n",
+       " 0.001297372873600585,\n",
+       " 0.0029191170013166496,\n",
+       " 3.618904854562451,\n",
+       " 0.0011388553340861299,\n",
+       " 0.0009094055448545618,\n",
+       " 0.002432226666138315,\n",
+       " 0.0016008994011953335,\n",
+       " 0.0043004270151504155,\n",
+       " 0.004238149493141338,\n",
+       " 0.0051862231277614605,\n",
+       " 0.0006740684339616821]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exps_Alg2[8].error_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0014761848295323985,\n",
+       " 0.0025441568831565697,\n",
+       " 0.002336394396734921,\n",
+       " 0.002811231879735304,\n",
+       " 0.0008481723404014112,\n",
+       " 0.003099896381744059,\n",
+       " 0.0016579433182324298,\n",
+       " 0.0007054061102531823,\n",
+       " 0.0017260607259161152,\n",
+       " 0.010466699936685819,\n",
+       " 0.0005207001560206798,\n",
+       " 0.0037617268661389856,\n",
+       " 0.0021027817121311064,\n",
+       " 0.000650973129420816,\n",
+       " 0.0008085207645555947,\n",
+       " 0.0018030957793219182,\n",
+       " 0.0009440378011368112,\n",
+       " 0.009520858683816445,\n",
+       " 0.0005913438482277973,\n",
+       " 0.0009760946844685452]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exps_Alg2[6].error_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.024282721887714992,\n",
+       " 0.049243447127595985,\n",
+       " 0.013345710280536,\n",
+       " 0.00971454517579864,\n",
+       " 0.0055370951143931865,\n",
+       " 0.021589313000175747,\n",
+       " 0.01021387061796582,\n",
+       " 0.013297356163619841,\n",
+       " 0.016762805516430977,\n",
+       " 0.0525460857008907,\n",
+       " 0.010336179071284984,\n",
+       " 0.013668393252971558,\n",
+       " 0.01926259576113366,\n",
+       " 0.012447455836770403,\n",
+       " 0.015249722759090454,\n",
+       " 0.017744997682418846,\n",
+       " 0.004777541983929848,\n",
+       " 0.0753868012079021,\n",
+       " 0.004677630311192571,\n",
+       " 0.013194155833573248]"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exps_find[6].error_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of equations that failed for Algorithm 2: 5\n",
+      "\n",
+      "Avg error for Algorithm 2: 0.004771798781525011\n",
+      "Max error for Algorithm 2: 0.09106565603453168\n",
+      "Min error for Algorithm 2: 9.956414452728521e-05\n",
+      "========================================\n",
+      "\n",
+      "Number of equations that failed for PDE-FIND: 0\n",
+      "\n",
+      "Avg error for PDE-FIND: 0.017157013549694906\n",
+      "Max error for PDE-FIND: 0.10867721447684361\n",
+      "Min error for PDE-FIND: 0.0010323092613782703\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_of_errors_Alg2 = []\n",
+    "list_of_errors_find = []\n",
+    "\n",
+    "for k in range(10):\n",
+    "    list_of_errors_Alg2 += exps_Alg2[k].error_list\n",
+    "    list_of_errors_find += exps_find[k].error_list\n",
+    "\n",
+    "list_of_errors_Alg2 = np.array([err for err in list_of_errors_Alg2 if err < 1])\n",
+    "list_of_errors_find = np.array([err for err in list_of_errors_find if err < 1])\n",
+    "\n",
+    "print('Number of equations that failed for Algorithm 2:', m*N - len(list_of_errors_Alg2))\n",
+    "print('')\n",
+    "print('Avg error for Algorithm 2:', list_of_errors_Alg2.mean())\n",
+    "print('Max error for Algorithm 2:', list_of_errors_Alg2.max())\n",
+    "print('Min error for Algorithm 2:', list_of_errors_Alg2.min())\n",
+    "\n",
+    "print('========================================')\n",
+    "print('')\n",
+    "print('Number of equations that failed for PDE-FIND:', m*N - len(list_of_errors_find))\n",
+    "print('')\n",
+    "print('Avg error for PDE-FIND:', list_of_errors_find.mean())\n",
+    "print('Max error for PDE-FIND:', list_of_errors_find.max())\n",
+    "print('Min error for PDE-FIND:', list_of_errors_find.min())"
    ]
   },
   {
