Final Burgers experiments

--- a/Burgers_noise_final-003.ipynb
+++ b/Burgers_noise_final-003.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "N = 10 # Number of experiments\n",
     "\n",
-    "noise = 0.0 #noise intensity\n",
+    "noise = 0.03 #noise intensity\n",
     "\n",
     "#Model parameters\n",
     "height = 3\n",
@@ -56,21 +56,21 @@
     "         free_num = free_num) # initialize rule. No multiplicative width and forcing. \n",
     "\n",
     "#Polynomial interpolation parameters for PDE-FIND\n",
-    "deg_x = 5\n",
-    "deg_t = 5\n",
+    "deg_x = 4\n",
+    "deg_t = 4\n",
     "\n",
     "true_eps = False #whether to use true value of eps (vs. estimated value) for PDE-FIND\n",
-    "finite_diff = True #whether to use finite difference (vs poly interpolation) for PDE-FIND\n",
+    "finite_diff = False #whether to use finite difference (vs poly interpolation) for PDE-FIND\n",
     "\n",
-    "offset_x = 30\n",
-    "offset_t = 30\n",
+    "offset_x = 20\n",
+    "offset_t = 20\n",
     "\n",
     "time_scale = 10 # increase the time interval for finer Euler scheme in PDE-FIND"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -79,56 +79,18 @@
      "text": [
       "Creating Model\n",
       "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
-      "Creating Model\n",
       "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
       "Finished experiment 1\n",
       "Creating Model\n",
       "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
-      "Creating Model\n",
       "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
       "Finished experiment 2\n",
       "Creating Model\n",
       "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
-      "Creating Model\n",
       "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
       "Finished experiment 3\n",
       "Creating Model\n",
-      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
-      "Creating Model\n",
-      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
-      "Finished experiment 4\n",
-      "Creating Model\n",
-      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
-      "Creating Model\n",
-      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
-      "Finished experiment 5\n",
-      "Creating Model\n",
-      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
-      "Creating Model\n",
-      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
-      "Finished experiment 6\n",
-      "Creating Model\n",
-      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
-      "Creating Model\n",
-      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
-      "Finished experiment 7\n",
-      "Creating Model\n",
-      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
-      "Creating Model\n",
-      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
-      "Finished experiment 8\n",
-      "Creating Model\n",
-      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
-      "Creating Model\n",
-      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
-      "Finished experiment 9\n",
-      "Creating Model\n",
-      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
-      "Creating Model\n",
-      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
-      "Finished experiment 10\n",
-      "CPU times: user 18min 55s, sys: 1min 35s, total: 20min 30s\n",
-      "Wall time: 18min 57s\n"
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n"
      ]
     }
    ],
@@ -212,51 +174,7 @@
     "    exps_Alg2.append(show_no_outliers)\n",
     "    \n",
     "    \n",
-    "    #ESTIMATE VISCOSITY\n",
-    "    \n",
-    "    # Regression to determine viscosity from train cases\n",
-    "\n",
-    "    j = 0\n",
-    "\n",
-    "    u_t = np.array([(Burgers_true[i].iloc[j+1].values-Burgers_true[i].iloc[j]).values/(T[1]-T[0])\n",
-    "                    for i in range(k) if i not in test]).flatten()\n",
-    "\n",
-    "    dx = X[1]-X[0]\n",
-    "\n",
-    "    M = SPDE(BC = 'P').Parabolic_Matrix(len(X)-1, 1, dx, inverse = False)\n",
-    "\n",
-    "    u = np.array([Burgers_true[i].iloc[j].values for i in range(k) if i not in test])\n",
-    "    u_xx = np.array([np.dot(M, U) for U in u]).flatten()\n",
-    "\n",
-    "    visc = lin_reg().fit(u_xx.reshape(-1, 1), u_t)\n",
-    "    exps_v_coef.append(visc.coef_)\n",
-    "\n",
-    "    # Algorithm 2 on the true data with learnt viscosity eps\n",
-    "\n",
-    "    experiment_v = IML(Burgers,\n",
-    "                       Rule = R,\n",
-    "                       eps = visc.coef_,\n",
-    "                       height = height,\n",
-    "                       deg = deg,\n",
-    "                       T = T,\n",
-    "                       X = X) # initialize experiment for algorithm 2\n",
-    "    experiment_v.set_train_test(test = test) # initialize test set\n",
-    "\n",
-    "    experiment_v.trees = experiment_noise.trees # extract trees\n",
-    "\n",
-    "    experiment_v.initialize_Predictions() \n",
-    "\n",
-    "    experiment_v.training_models() # Create models for Step 2 of Algorithm 2\n",
-    "    \n",
-    "    experiment_v.fit_training_model() # Linear fit for Step 2 of Algorithm 2\n",
-    "    experiment_v.learn_with_fitted() # Recurcive steps 3 & 4 of Algorithm 2\n",
-    "    \n",
-    "    Prediction_v = experiment_v.to_df_list()\n",
-    "\n",
-    "    show_v = summary(experiment_v.test)\n",
-    "    er_find = show_v.errors(Burgers_true,Prediction_v, show = False)\n",
-    "    exps_v.append(show_v)\n",
-    "    \n",
+    " \n",
     "    \n",
     "    #PDE-FIND\n",
     "    \n",
@@ -320,57 +238,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average average error: 0.011491614344608485\n",
-      "Maximum average error: 0.015764099761612853\n",
-      "Minimum average error: 0.008456665154350234\n",
-      "\n",
-      "Average maximum error: 0.04908839234746172\n",
-      "Maximum maximum error: 0.09384571633480515\n",
-      "Minimum maximum error: 0.02770761363090532\n",
-      "\n",
-      "Average minimum error: 0.0012604934107144933\n",
-      "Maximum minimum error: 0.00254577648901588\n",
-      "Minimum minimum error: 0.00059844400959185\n",
-      "\n",
-      "=====================\n",
-      "Average average error: 0.011399427379851649\n",
-      "Maximum average error: 0.015641513092418204\n",
-      "Minimum average error: 0.008406330727983148\n",
-      "\n",
-      "Average maximum error: 0.048601263188825704\n",
-      "Maximum maximum error: 0.09231330979758934\n",
-      "Minimum maximum error: 0.02731753002769858\n",
-      "\n",
-      "Average minimum error: 0.0013304016120411848\n",
-      "Maximum minimum error: 0.0026363217289888377\n",
-      "Minimum minimum error: 0.0006495188729334523\n",
-      "\n",
-      "=====================\n",
-      "Average average error: 0.009215854560139578\n",
-      "Maximum average error: 0.023100907605212474\n",
-      "Minimum average error: 0.0051933811349299894\n",
-      "\n",
-      "Average maximum error: 0.026709022316861276\n",
-      "Maximum maximum error: 0.10535651777478254\n",
-      "Minimum maximum error: 0.011221499162791103\n",
-      "\n",
-      "Average minimum error: 0.003090704812261569\n",
-      "Maximum minimum error: 0.006480227858360889\n",
-      "Minimum minimum error: 0.0019001374323401766\n",
-      "\n",
-      "=====================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for exps in [exps_Alg2, exps_v, exps_find]:\n",
+    "for exps in [exps_Alg2, exps_find]:\n",
     "\n",
     "    print(\"Average average error:\", np.mean([e.av_er for e in exps]))\n",
     "    print(\"Maximum average error:\", max([e.av_er for e in exps]))\n",
@@ -392,45 +264,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average viscosity: 0.17709208792695938\n",
-      "Maximum viscosity: [0.18245993]\n",
-      "Minimum viscosity: [0.17099517]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Average viscosity:\", np.mean(exps_v_coef))\n",
-    "print(\"Maximum viscosity:\", max(exps_v_coef))\n",
-    "print(\"Minimum viscosity:\", min(exps_v_coef))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average viscosity: 0.212483024601422, lambda: -0.9837357080301015\n",
-      "Maximum viscosity: 0.24627968147996943, lambda: -0.9788955718104302\n",
-      "Minimum viscosity: 0.20331845043728922, lambda: -0.9867363579797023\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Average viscosity: {}, lambda: {}\".format(np.mean(exps_find_eps), np.mean(exps_find_lambd)))\n",
     "print(\"Maximum viscosity: {}, lambda: {}\".format(max(exps_find_eps), max(exps_find_lambd)))\n",
     "print(\"Minimum viscosity: {}, lambda: {}\".format(min(exps_find_eps), min(exps_find_lambd)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
